--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -8,13 +8,13 @@ sidebar_position: 2
 
 ### History
 
-In the mid 18th century, Benjamin Franklin conducted a series of experiments concerning the attraction between objects and their electrical properties. He would work with materials such as glass rods, silk, and metal while analyzing their behavior when rubbed against one another. The idea that opposite charges attract and like charges repel was already observed by many, but he tried to uncover the inner workings behind this concept. His idea of `positive charges` and `negative charges` went on to become a strong foundation for the field of electromagnetism.
+In the mid 18th century, Benjamin Franklin conducted a series of experiments concerning the attraction between objects and their electrical properties. He would work with materials such as glass rods, silk, and metal while analyzing their behavior when rubbed against one another. The idea that opposite charges attract and like charges repel was already observed by many, but he tried to uncover the inner workings behind this concept. His idea of *positive charges* and *negative charges* went on to become a strong foundation for the field of electromagnetism.
 
-![Benjamin Franklin](benfranklin.png)
+![Benjamin Franklin](../Unit-8/benfranklin.jpg)
 
 ### Foundational Concepts
 
-When materials adhere in the way that silk andd glass adhere after rubbing, they are said to be `electrified` or electrically charged.
+When materials adhere in the way that silk andd glass adhere after rubbing, they are said to be *electrified* or electrically charged.
 
 The foundational concepts for electrical charges are as follows:
 
@@ -26,7 +26,7 @@ The foundational concepts for electrical charges are as follows:
 
 ### Negative and Positive Charges
 
-As you may recall, an atom is made up of `electrons (-)`, `protons (+)`, and `neutrons (0)`. Depending on the combinations of electrons, protons and neutrons, the atom is then either positively or negatively charged.
+As you may recall, an atom is made up of *electrons (-)*, *protons (+)*, and *neutrons (0)*. Depending on the combinations of electrons, protons and neutrons, the atom is then either positively or negatively charged.
 
 Positively charged objects are at a loss of electrons. Their net charge is positive because there are fewer electrons then there are protons.
 
@@ -37,13 +37,13 @@ Negatively charged objects are at a gain of extra electrons. Their charge is neg
 
 Electrical charge is never actually created. It is conserved through a transfer of electrons between charged objects. This transfer creates attraction.
 
-It is also impportant to note that `electrons move, but protons stay put` so the attraction between two oppositely charged objects occurs because `the negatively charged object's electrons attact to the net positive charge of the positively charged object`
+It is also important to note that *electrons move, but protons stay put* so the attraction between two oppositely charged objects occurs because *the negatively charged object's electrons attact to the net positive charge of the positively charged object*
 
 ### Quantization of Electrons
 
-In 1909, Rober Milikan performed the `oil drop experiment`. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric fieldd. He found that electricity is actually `quantized` meaning it comes out in `chunks` or `discrete packets`. 
+In 1909, Rober Milikan performed the *oil drop experiment*. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric fieldd. He found that electricity is actually *quantized* meaning it comes out in *chunks* or *discrete packets*.
 
-Foundationally, this became the formula `q = Ne` such that `q` is the total charge, `N` is an integer number, positive or negative, and `e` is the elementary charge.
+Foundationally, this became the formula $q = Ne$ such that `q` is the total charge, `N` is an integer number, positive or negative, and `e` is the elementary charge.
 
 The idea became that:
 - Electrons have a charge of `-e`, but negatively charged objects can have charges like `-2e` and `-3e`
