--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -32,7 +32,6 @@ Positively charged objects are at a loss of electrons. Their net charge is posit
 
 Negatively charged objects are at a gain of extra electrons. Their charge is negative because there are fewer protons then there are electrons
 
-
 ### Convervation of Electrical Charge
 
 Electrical charge is never actually created. It is conserved through a transfer of electrons between charged objects. This transfer creates attraction.
@@ -43,22 +42,23 @@ It is also important to note that *electrons move, but protons stay put* so the 
 
 In 1909, Rober Milikan performed the *oil drop experiment*. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric fieldd. He found that electricity is actually *quantized* meaning it comes out in *chunks* or *discrete packets*.
 
-Foundationally, this became the formula $q = Ne$ such that `q` is the total charge, `N` is an integer number, positive or negative, and `e` is the elementary charge.
+Foundationally, this became the formula $q = Ne$ such that $q$ is the total charge, $N$ is an integer number, positive or negative, and $e$ is the elementary charge.
 
 The idea became that:
-- Electrons have a charge of `-e`, but negatively charged objects can have charges like `-2e` and `-3e`
-- Protons have a charge of `+e`, but positively charged objects can have charges like `+2e` and `+3e`
-- Neutrons have a charge of `0`
+
+- Electrons have a charge of $-e$, but negatively charged objects can have charges like $-2e$ and $-3e$
+- Protons have a charge of $+e$, but positively charged objects can have charges like $+2e$ and $+3e$
+- Neutrons have a charge of $0$
 
 ## 8.1.2 Charging Objects by Induction
 
 ### Conductors and Insulators
 
-Conductors `e.g. Metals` are materials in which some electrons are free. Meaning electrons can move freely throughout the materials.
+Conductors (e.g. Metals) are materials in which some electrons are free. Meaning electrons can move freely throughout the materials.
 
-Insulators `e.g. Glass` are materials in which all electrons are bound to atoms and can't move freely at all. 
+Insulators (e.g. Glass) are materials in which all electrons are bound to atoms and can't move freely at all.
 
-Semiconductors `e.g. Silicon` have properties similar to both conductors and insulators.
+Semiconductors (e.g. Silicon) have properties similar to both conductors and insulators.
 
 ### Charging Objects by Induction
 
@@ -71,7 +71,3 @@ Induction is the process of charging a conductor, such as a metal, without touch
 5. Ground the wire attached to the sphere so that the electrons which are repelled by the rod escape into the ground
 6. Remove the ground connection and the rod
 7. The sphere is not positively charged because the repelled electrons escaped into the ground
-
-
-
-
