--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -8,47 +8,70 @@ sidebar_position: 2
 
 ### History
 
-In the mid 18th century, Benjamin Franklin conducted a series of experiments concerning the attraction between objects and their electrical properties. He would work with materials such as glass rods, silk, and metal while analyzing their behavior when rubbed against one another. The idea that opposite charges attract and like charges repel was already observed by many, but he tried to uncover the inner workings behind this concept. His idea of *positive charges* and *negative charges* went on to become a strong foundation for the field of electromagnetism.
+In the mid 18th century, Benjamin Franklin conducted a series of experiments concerning the attraction between objects and their electrical properties. He would work with materials such as glass rods, silk, and metal, while analyzing their behavior when rubbed against one another. The idea that opposite charges attract and like charges repel was already observed by many, but he tried to uncover the inner workings behind this concept. His idea of *positive charges* and *negative charges* went on to become a strong foundation for the field of electromagnetism.
 
 ![Benjamin Franklin](../Unit-8/benfranklin.jpg)
 
 ### Foundational Concepts
 
-When materials adhere in the way that silk andd glass adhere after rubbing, they are said to be *electrified* or electrically charged.
+Have you ever rubbed a balloon against your hair and stuck it to a wall? There's no glue or adhesives, so how does it stay up? Based on the title, you can probably guess the reason: electrical charge!
 
-The foundational concepts for electrical charges are as follows:
+When such materials (like the balloon) act like this, they are considered *electrified* or **electrically charged**. When Franklin conducted his experiments, he discovered a set of foundational concepts that govern electrical charges.
 
+:::tip[Key Concepts]
+
+- Like charges repel (ex: positive and positive); opposite charges attract (ex: positive and negative)
+  - You most likely know this one!
 - Negative charges are posessed by electrons
 - Positive charges are posessed by protons
-- Like charges repel, opposite charges attract
 - Electrical charge is ALWAYS conserved
+  - You will probably recognize that this is similar to most other laws of conservation in physics.
+  - In the balloon example, the *transfer* of charge is what makes it electrified. One object gains some negative charge while the other gains an equal amount of positive charge. Remember from mechanics: opposite and equal!
 - Electrical charges are quantized
+
+:::
 
 ### Negative and Positive Charges
 
-As you may recall, an atom is made up of *electrons (-)*, *protons (+)*, and *neutrons (0)*. Depending on the combinations of electrons, protons and neutrons, the atom is then either positively or negatively charged.
+As you may recall, an atom is made up of *electrons (-)*, *protons (+)*, and *neutrons (0, or no charge)*. Depending on the combinations of electrons, protons and neutrons, the atom is then either positively or negatively charged.
 
-Positively charged objects are at a loss of electrons. Their net charge is positive because there are fewer electrons then there are protons.
+Positively charged objects are at a loss of electrons. Their net charge is positive because there are fewer electrons than there are protons.
 
-Negatively charged objects are at a gain of extra electrons. Their charge is negative because there are fewer protons then there are electrons
+Negatively charged objects are at a gain of extra electrons. Their charge is negative because there are fewer protons than there are electrons
 
 ### Convervation of Electrical Charge
 
 Electrical charge is never actually created. It is conserved through a transfer of electrons between charged objects. This transfer creates attraction.
 
-It is also important to note that *electrons move, but protons stay put* so the attraction between two oppositely charged objects occurs because *the negatively charged object's electrons attact to the net positive charge of the positively charged object*
+It is also important to note that *electrons move, but protons don't*. Let's say that you have two objects: one is positively charged (which we will call object P) and one is negatively charged (which we will call object N). Recall that an object's charge is determined by their electron and proton count. Object P has *less* electrons (-) than protons (+), so it has a *net-positive* charge. Object P has *more* electrons (-) than protons (+), so it has a *net-negative* charge. The attraction between these two oppositely charged objects occurs because Object N's electrons attract to Object P's net-positive charge. The electrons move, but the proton's don't.
 
-### Quantization of Electrons
+### Quantization of Charge
 
-In 1909, Rober Milikan performed the *oil drop experiment*. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric fieldd. He found that electricity is actually *quantized* meaning it comes out in *chunks* or *discrete packets*.
+In 1909, Rober Milikan performed the oil drop experiment. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric field. He found that charge is *quantized*, denoted by the variable $q$, and is always an integral multiple of an amount of charge $e$.
+
+:::info
+
+An integral multiple is a number resulting from multiplying an integer with a whole number. In other words, it means a whole number multiplied by another whole number. For example, $10$ is an integral multiple of $2$ because $2 * 5 = 10$.
+
+:::
+
+In other words, charges MUST be present in discrete forms, or whole numbers; you cannot have half a charge. Additionally, you cannot have half an electron. It also means that charges exist in "bundles."
 
 Foundationally, this became the formula $q = Ne$ such that $q$ is the total charge, $N$ is an integer number, positive or negative, and $e$ is the elementary charge.
 
 The idea became that:
 
-- Electrons have a charge of $-e$, but negatively charged objects can have charges like $-2e$ and $-3e$
-- Protons have a charge of $+e$, but positively charged objects can have charges like $+2e$ and $+3e$
+- Electrons have a charge of $-e$, and negatively charged objects can have charges like $-2e$ and $-3e$
+- Protons have a charge of $+e$, and positively charged objects can have charges like $+2e$ and $+3e$
 - Neutrons have a charge of $0$
+
+:::tip[Key Concepts]
+
+- There are two types of charges: charges of opposite signs attract and charges of the same sign repel
+- Total charge in an isolated system is conserved (conservation of charge)
+- Charge is *quantized*
+
+:::
 
 ## 8.1.2 Charging Objects by Induction
 
