electro static + assets + review of charges + other minor changes

--- a/docs/Unit-8/8.2-coulomb.md
+++ b/docs/Unit-8/8.2-coulomb.md
@@ -4,4 +4,125 @@ sidebar_position: 3
 
 # 8.2 - Coulomb's Law
 
-## 
+## 8.2.1 - Introduction to Coulomb's Law
+
+### History
+
+Charles-Augustin de Coulomb (1736-1806) was a French physicist and formulated Coulomb's Law. He developed this law when investigating the law of electrical repulsions, which was developed by Joseph Priestley earlier.
+
+Coulomb used a *torsion balance* to study the electric forces of charged particles. In his experiment, he suspended a needle horizontally via a thin, insulative string. The needle was made with an insulating material, and it had a conductive metal ball on one end with another ball to balance the weight on the other. Next, he took a third ball and connected it to a rigid insulating rod. He would then hang the rod such that the ball on the end is touching the conductive ball of the needle. When the rod’s ball had no charge, the needle would not move. However, when he charged the rod’s ball and put it near the needle’s end, the needle would start to move because the needle’s conductive ball would be repelled by the rod’s ball. He would repeat this setup several times, charging the rod’s ball by a different amount. When he measured how much the needle twisted, he could determine how much force an electrical charge could produce.
+
+:::note[Suggested Content]
+
+Sounds complicated? Don’t worry! Here is an excellent video explaining his experiment. We highly suggest watching this to further your understanding.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FYSTGX-F1GM?si=T8FEq4nFLLPeH16g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+:::
+
+He determined that the electric force between two charged objects is proportional to the inverse square of their separation distance. In other words, $F_{e} \propto \frac{1}{r^{2}}$ where $F_{e}$ is the electrical force and $r$ is the distance between the two objects.
+
+### Foundational Concepts
+
+Based on Coulomb's experiments, we can determine a set of properties for **electric force** between two non-moving charged particles.
+
+:::tip[Key Concepts]
+
+* Electric force is a conservative force
+* The force is attractive if the charges are of the opposite sign and repulsive if the charges are of the same sign
+* The force is proportional to the product of the magnitudes of the charges, |q_{1}| \cdot |q_{2}|
+* The force is inversely proportional to the square of the distance between the charges and is directed along the line that joins them
+  * When the charges are close, the force is stronger. When the charges are far, the force is weaker. It is similar to how gravitational force works. If the distance between two charges is doubled, the force is a fourth of the strength. If the charges are twice as close, the force increases by a factor of four.
+
+:::
+
+### The Coulomb’s Law Equation and the Coulomb Constant
+
+Just like how we can define an object as a particle for mechanical physics, we can define a charge as a **point charge**. **Coulomb’s law** helps us determine the electric force (alternatively called *Coulomb force*)) between two point charges:
+
+:::tip[Key Equation]
+
+$F_{e} = k_{e}\cdot\frac{|q_{1}|\cdot|q_{2}|}{r^{2}}$
+
+:::
+
+Does this equation seem familiar? It is similar to Newton’s gravitation law!
+
+In Coulomb’s law, $k_{e}$ is the **Coulomb constant**. The Coulomb constant is as follows:
+
+$k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2}$
+
+where $\text{C}$ is the SI unit of charge called a **coulomb**. It’s similar to how $\text{N}$ is a newton.
+
+You can also represent the constant like this:
+
+$k_{e} = \frac{1}{4\pi\epsilon_{0}}$
+
+where $\epsilon_{0}$ (epsilon) is the **permittivity of free space**. $\epsilon_{0}$ is defined as follows:
+
+$\epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
+
+The smallest known unit of charge is the charge of an electron ($-e$) or a proton (+$e$) where $e = 1.60219 \times 10^{-19} \text{ C}$. So, a charge of $1C$ is roughly equal to the magnitude of the charge of $6.24 \times 10^{18}$ electrons (or protons).
+
+Below are the charges and masses of an electron, proton, and neutron:
+
+| Particle | Charge (C)                   | Mass (kg)                 |
+|----------|------------------------------|---------------------------|
+| Electron | $-1.6021917 \times 10^{-19}$ | $9.1095 \times 10^{-31}$  |
+| Proton   | $+1.6021917 \times 10^{-19}$ | $1.67261 \times 10^{-27}$ |
+| Neutron  | $0$                          | $1.67492 \times 10^{-27}$ |
+
+### Electrostatic forces
+
+Just like in mechanics, we can represent electrostatic forces as a force vector! We can express the force that an electric charge $q_{1}$ exerts on another charge $q_{2}$ as $F_{12}$:
+
+$\mathbf{F}_{12} = k_{e}\frac{q_{1} \cdot q_{2}}{r^{2}} \mathbf{\widehat{r}}$
+
+Electrostatic forces also obey Newton’s third law, so the electrostatic force exerted by $q_{1}$ on $q_{2}$ is equal and opposite to the force exerted by $q_{2}$ on $q_{1}$. In other words, $\mathbf{F}_{12} = -\mathbf{F}_{21}$.
+
+Note that if the charges have the same sign, both negative or both positive, then the force is positive. If the charges have opposite signs, then the force is negative. The signs don’t describe the *absolute* direction of the force, but rather the *relative* direction.
+
+* A negative force means the force is attractive because the charges are of opposite signs.
+* A positive force means the force is repulsive because the charges are of the same signs.
+
+When calculating the net force from more than two charges, you simply sum up the resultant forces exerted by the individual charges. It’s just like what was done in mechanics. For example, let’s say we have four charges and we want to calculate the resultant force on particle 1. It would be the following:
+
+$\mathbf{F}_{1} = \mathbf{F}_{21} + \mathbf{F}_{31} + \mathbf{F}_{41}$.
+
+By now, you should be noticing patterns and similarities with existing mechanical concepts!
+
+:::note[Suggested Content]
+
+Here is a video describing how we can use Coulomb's Law to determine electrostatic forces.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2GQTfpDE9DQ?si=OfM4Z1MKd8JXyqwe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+:::
+
+## Useful Resources
+
+* [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
+* [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
+
+<br></br>
+
+* [Britannica's definition of Coulomb’s law](https://www.britannica.com/science/Coulombs-law)
+* [Khan Academy video on Coulomb's law and determining electrostatic forces](https://youtu.be/2GQTfpDE9DQ)
+* [Khan Academy review article on Coulomb's law and electrostatic forces](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/coulombs-law-and-electric-force-ap-physics-1)
+* [Alternate explanation of charge and force](https://phys.libretexts.org/Courses/University_of_California_Davis/UCD%3A_Physics_7C_-_General_Physics/11%3A_Electromagnetism/11.2%3A_Electric_Force#:~:text=The%20force%20depends%20on%20the,forces%2C%20is%20a%20pairwise%20interaction.)
+* [The Organic Chemistry Tutor video on Coulomb's Law](https://www.youtube.com/watch?v=kCp5yYjo9zE)
+
+### Equations and Constants
+
+**Equations**
+
+* $F_{e} = k_{e}\cdot\frac{|q_{1}|\cdot|q_{2}|}{r^{2}}$
+  * $F_{e}$ = electric force
+  * $k_{e}$ = Coulomb's constant
+  * $q_{1}$ and $q_{2}$ = the two charges
+  * $r$ = distance between the charges
+
+**Constants**
+
+* $k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2} = \frac{1}{4\pi\epsilon_{0}}$
+* $\epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
