--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -49,9 +49,9 @@ It is also important to note that *electrons move, but protons don't*. Let's say
 
 In 1909, Rober Milikan performed the oil drop experiment. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric field. He found that charge is *quantized*, denoted by the variable $q$, and is always an integral multiple of an amount of charge $e$.
 
-:::info
+:::note
 
-An integral multiple is a number resulting from multiplying an integer with a whole number. In other words, it means a whole number multiplied by another whole number. For example, $10$ is an integral multiple of $2$ because $2 * 5 = 10$.
+An integral multiple is a number resulting from multiplying an integer with a whole number. In other words, it means a whole number multiplied by another whole number. For example, $10$ is an integral multiple of $2$ because $2 \cdot 5 = 10$.
 
 :::
 
@@ -77,20 +77,22 @@ The idea became that:
 
 ### Conductors and Insulators
 
-Conductors (e.g. Metals) are materials in which some electrons are free. Meaning electrons can move freely throughout the materials.
-
-Insulators (e.g. Glass) are materials in which all electrons are bound to atoms and can't move freely at all.
-
-Semiconductors (e.g. Silicon) have properties similar to both conductors and insulators.
+- **Conductors** (e.g. Copper) are materials in which some electrons are free and can move throughout the material.
+- **Insulators** (e.g. Wood) are materials in which all electrons are bound to the atoms and can't move freely at all.
+- **Semiconductors** (e.g. Silicon) have properties similar to both conductors and insulators.
 
 ### Charging Objects by Induction
 
-Induction is the process of charging a conductor, such as a metal, without touching it. Below is an example of how this works
+Induction is the process of charging a conductor, such as a metal, without touching it. Below is an example of how this works:
 
-1. A piece of metal starts with neutral charge (equal electrons and protons)
-2. The metal is brought near a negatively charged rod
-3. Since the rod is negatively charged, it repels at first with the sphere
-4. The part sphere closest to the rod will now have a positive charge
-5. Ground the wire attached to the sphere so that the electrons which are repelled by the rod escape into the ground
-6. Remove the ground connection and the rod
-7. The sphere is not positively charged because the repelled electrons escaped into the ground
+1. A conductive metal object, which we will call Object M, starts with neutral charge (equal electrons and protons)
+2. Object M is brought near another object. However, the second object (we will call it Object C) is charged. Let's say that Object C has a negative charge.
+3. Remember: since Object M is made up of conductive metal, the electrons can move around freely. When we bring Object C near Object M, any electrons in M close to C will be repelled due to C's negative charge. Therefore, they will move to the other side of M.
+4. Now, the part of Object M that was closest to Object C will have an overall positive charge since those electrons moved away. However, Object M still won't be charged! The reason is because the electrons haven't left M. They are still there, but have just moved away from where Object C is. When we remove Object C, the electrons won't be repelled anymore and the overall charge of Object M won't be different. To make Object M charged, we need to **ground** it.
+5. When we attach a grounding wire to Object M, we are essentially connecting it to a reservoir, like Earth, which can accept and provide electrons freely with negligible effects. Think of a grounding wire like a pipe to the ocean. Because the ocean is massive, any water that we add or remove won't have a noticeable effect on the ocean's overall water amount. Similarly, any electrons which are accepted or provided to Earth (ground) won't affect Earth's overall electron amount.
+6. After we ground Object M, some of the repelled electrons that have moved to the other side will end up escaping through the wire and entering Earth.
+7. When you cut off the ground connection, Object M will have more protons than electrons because those repelled electrons have left. Therefore, the overall charge will be *positive*.
+
+## Useful Resources
+
+- [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
