--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -95,4 +95,9 @@ Induction is the process of charging a conductor, such as a metal, without touch
 
 ## Useful Resources
 
-- [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
+**8.1.1**
+
+* [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
+* [Professor Dave Explains video on charge](https://www.youtube.com/watch?v=VFbyDCG_j18)
+  * The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
+* [Crash Course video about charge](https://www.youtube.com/watch?v=TFlVWf8JX4A)
