--- a/docs/Unit-8/8.2-coulomb.md
+++ b/docs/Unit-8/8.2-coulomb.md
@@ -36,6 +36,8 @@ Based on Coulomb's experiments, we can determine a set of properties for **elect
 
 :::
 
+## 8.2.2 - Defining Coulomb's Law and Electrostatics
+
 ### The Coulomb’s Law Equation and the Coulomb Constant
 
 Just like how we can define an object as a particle for mechanical physics, we can define a charge as a **point charge**. **Coulomb’s law** helps us determine the electric force (alternatively called *Coulomb force*)) between two point charges:
@@ -72,7 +74,7 @@ Below are the charges and masses of an electron, proton, and neutron:
 | Proton   | $+1.6021917 \times 10^{-19}$ | $1.67261 \times 10^{-27}$ |
 | Neutron  | $0$                          | $1.67492 \times 10^{-27}$ |
 
-### Electrostatic forces
+### Electrostatic Forces
 
 Just like in mechanics, we can represent electrostatic forces as a force vector! We can express the force that an electric charge $q_{1}$ exerts on another charge $q_{2}$ as $F_{12}$:
 
@@ -101,10 +103,12 @@ Here is a video describing how we can use Coulomb's Law to determine electrostat
 
 ## Useful Resources
 
+**8.2.1**
+
 * [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
 * [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
 
-<br></br>
+**8.2.1**
 
 * [Britannica's definition of Coulomb’s law](https://www.britannica.com/science/Coulombs-law)
 * [Khan Academy video on Coulomb's law and determining electrostatic forces](https://youtu.be/2GQTfpDE9DQ)
