--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -1,26 +1,80 @@
 ---
-sidebar_position: 3
+sidebar_position: 4
 ---
 
-# 8.2 - Electric Fields
+# 8.3 - Electric Fields
 
-## 8.2.1 - Sub Heading
+## 8.3.1 - The Electric Field
+
+### Gravitational Fields and Electrical Fields
+
+It might sound strange that we are discussing gravitational fields. After all, shouldn't we be talking about electric fields? Well, as you've seen in previous topics, the concepts from mechanics are not all that different from E&M.
+
+When studying gravitational fields, we knew that the gravitational force $\mathbf{F}_{g}$ acting on a particle of mass $m$ could be defined as $\mathbf{g} = \frac{\mathbf{F}_{g}}{m}$. Similarly, electric fields can act on a particle of charge. And just like how a gravitational field exists around an object, an electrical field exists in the region of space around a charged object which is called the **source charge**. When a secondary object, called the **test charge** enters the field, an electric force acts upon it. That may sound strange, but consider the following: think about the Earth and the Moon for a bit. The Earth has a gravitational field all around it. If we removed the Moon and all other objects, then Earth's gravitational field wouldn't exert a force on anything. Sure, the field is still present, but there's nothing to exert a force on. If we add the Moon back, you'll see that Earth's gravitational field acts on it. Similarly, a charged particle has an electric field and when another charged particle enters it, an electric force will act on the particle that entered.
+
+### Mathematically Defining the Electric Field
+
+:::tip[Key Equation]
+
+An electric field is defined as $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$, where:
+$\mathbf{E}$ is the electric field vector, or the symbol representing the field
+$\mathbf{F}_{e}$ is the electrical force, as seen in Coulomb’s law
+$q_{0}$ is the positive test charge which we placed in the field (basically the electrical equivalent of the Moon being placed in Earth’s gravitational field)
+
+This equation says that the electric field from the source charge at the location of the test charge is equivalent to the electric force on the test charge per unit of charge.
+
+:::
+
+:::danger[Warning]
+
+The equation above only works for particles, or an object of zero size. For objects that have a defined size, things can get significantly more complicated and will often involve calculus or more complex math.
+:::
+
+It’s important to note that $\mathbf{E}$ is the electric field of the source charge, not the test charge. Furthermore, the existence of the electric field is always part of the source charge and is not dependent on the test charge existing. Remember: Earth still has a gravitational field, even if we removed the Moon. The test charge is only there to help us detect the electric field, just as the Moon helps us detect Earth’s gravitational field.
+
+:::tip[Key Equation]
+
+We can also write the electric field equation as $\mathbf{F}_{e}  = q\mathbf{E}$
+
+:::
+
+The equation above tells us the force on a charged particle placed in an electric field. Just like previous units, directionality still applies. So, if $q$ is positive, then the force is in the same direction of the field. If $q$ is negative, then the force and field are in opposite directions.
+
+$\mathbf{E}$ is a vector and is newtons per coulomb, or N/C. The direction of $\mathbf{E}$ is the direction of the force on the test charge.
+
+## 8.3.2 - Electric Fields of Continuous Charge Distributions
+
+### Sub Sub Heading
+
+## 8.3.3 - Electric Fields of Continuous Charge Distributions
+
+### Sub Sub Heading
+
+## 8.3.4 - Electric Field Lines
+
+### Sub Sub Heading
+
+## 8.3.5 - Charged Particle Motion in Uniform Electric Fields
 
 ### Sub Sub Heading
 
 ## Useful Resources
 
+**8.3.1**
+
+* [Professor Dave Explains video on fields](https://www.youtube.com/watch?v=VFbyDCG_j18)
+  * The first part of the video is about charge. Skip it and go to the section about electric fields.
+* [Khan Academy video explaining fields](https://www.khanacademy.org/science/ap-physics-2/ap-2-electric-charge-electric-force-and-voltage/electric-field-ap2/v/electric-field-definition)
+* [Crash Course video about electric fields](https://www.youtube.com/watch?v=mdulzEfQXDE)
+* [Khan Academy article about electricl fields](https://www.khanacademy.org/science/electrical-engineering/ee-electrostatics/ee-electric-force-and-electric-field/a/ee-electric-field)
+
 ### Equations and Constants
 
 **Equations**
 
-* $F_{e} = k_{e}\cdot\frac{|q_{1}|\cdot|q_{2}|}{r^{2}}$
-  * $F_{e}$ = electric force
-  * $k_{e}$ = Coulomb's constant
-  * $q_{1}$ and $q_{2}$ = the two charges
-  * $r$ = distance between the charges
+* equation
+  * define each term
 
 **Constants**
 
-* $k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2} = \frac{1}{4\pi\epsilon_{0}}$
-* $\epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
+* list of constants
