--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -38,9 +38,60 @@ We can also write the electric field equation as $\mathbf{F}_{e}  = q\mathbf{E}$
 
 :::
 
-The equation above tells us the force on a charged particle placed in an electric field. Just like previous units, directionality still applies. So, if $q$ is positive, then the force is in the same direction of the field. If $q$ is negative, then the force and field are in opposite directions.
+The equation above tells us the force on a charged particle placed in an electric field. Just like before, directionality still applies. So, if $q$ is positive, then the force is in the same direction of the field. If $q$ is negative, then the force and field are in opposite directions.
 
-$\mathbf{E}$ is a vector and is newtons per coulomb, or N/C. The direction of $\mathbf{E}$ is the direction of the force on the test charge.
+$\mathbf{E}$ is a vector and is in newtons per coulomb, or N/C. The direction of $\mathbf{E}$ is the direction of the force on the test charge. For example, if $\mathbf{E}$ is in the positive direction, then the force on our test charge is also in the positive direction.
+
+We can state that **an electric field exists as a specific point/location if a test charge at that point/location experiences an electric force.** If you know the magnitude and direction of the field at a point, you can calculate the force exerted on any particle at that same point using the aforementioned key equation.
+
+It’s important to note that these equations only work if **we assume that $q_{0}$ (the test charge) is extremely small and doesn’t affect the charge distribution of the electric field.** If you were to have a particle with a significant amount of charge ($q^{'}_{0} \gg q_{0}$), then the electric fields end up changing. In that case, we can’t use the equations above. This is because the *ratio of the force to the test charge is different*. In other words, $\frac{F^{'}_{e}}{q^{'}_{0}} \not\equiv \frac{F_{e}}{q_{0}}$. Now, the equations will not work for the new test case. So remember: $q_{0}$ has to be extremely small.
+
+### Determining the Direction of an Electric Field
+
+![Postive source charge and a test charge; the force is directed away from the source.](pos-force.svg)
+
+Consider the diagram above. Here, we have a source charge $q$ and a test charge $q_{0}$. We have placed $q_{0}$ at a distance of $r$ away from $q$, and we will use this test charge to find out the direction of $q$’s electric force and thus the direction of its field.
+
+Notice how the force vector $\mathbf{F}$ is pointing away from $q$. Because $q$ is positive, the force of the test charge will be directed away from $q$. Remember, the test charge is considered as positive, since this is the standard convention. Both charges are positive and are repelling, so the vector is directed away.
+
+We know that the force exerted by $q$ on the test charge is the following (Coulomb’s law):
+
+$\mathbf{F_{e}} = k_{e}\frac{qq_{0}}{r^{2}}\mathbf{\hat{r}}$
+
+$\mathbf{\hat{r}}$ is a unit vector and it’s directed from $q$ to $q_{0}$.
+
+Furthermore, we know that an electric field is defined as $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$. When we substitute $\mathbf{F_{e}}$ in, we get the following:
+
+$\mathbf{E} = \frac{k_{e}\frac{qq_{0}}{r^{2}}\mathbf{\hat{r}}}{q_{0}} = \frac{k_{e}\frac{q\cancel{q_{0}}}{r^{2}}\mathbf{\hat{r}}}{\cancel{q_{0}}} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+
+:::tip[Key Equation]
+$\mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+:::
+
+Remember how we said that the electric field of a charged object is **not** dependent on the test charge’s presence, similar to how Earth’s gravitational field is **not** dependent on the Moon’s presence? Well, you’ll see that in the equation above, $q_{0}$ (the test charge) isn’t even there!
+
+Now, consider the following diagram:
+
+![Postive source charge with an observed positive electric field.](pos-field.svg)
+
+The diagram above represents our equation for the electric field. You’ll see that the electric field at point $P$, where $q_{0}$ used to be, is in the same direction as the electric force. Below, you’ll see what happens to the electric field if $q$ is *negatively charged.* In fact, if you plug in a negative value for $q$ into the electric field equation, you’ll get a negative vector answer.
+
+![Negative source charge; the field is directed towards the source.](neg-field.svg)
+
+### Calculating the Electric Field due to a Group of Point Charges
+
+What do we do if we want to find out the electric field at a point $P$ due to multiple point charges? Well, we know that $\mathbf{E}$ is a vector. Therefore, we take the vector sum of all the electric field vectors at $P$ to find the net electric field at that point. This is just like how we add up force vectors to find a net force on an object!
+
+:::tip[Key Equation]
+
+The electric field at point $P$ due to a group of source charges is the following vector sum:
+
+$\mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
+
+* $r_{i}$ is the distance between the $i$th source charge $q_{i}$ and point $P$
+* $\hat{\mathbf{r}}_{i}$ is a unit vector directed from $q_{i}$ toward $P$
+
+:::
 
 ## 8.3.2 - Electric Fields of Continuous Charge Distributions
 
