--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -95,17 +95,45 @@ $\mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
 
 ## 8.3.2 - Electric Fields of Continuous Charge Distributions
 
+Let’s say that we have a group of charges and we want to calculate the electric field at a certain location or point. We already know that we can take the vector sum of all the electric fields, as demonstrated previously. However, it is often that these groups of electric charges are so close together that they can be modeled as continuous. In order words, these charges that are closely spaced and packed together are the same as a total charge which is continuously distributed along a line, surface, or throughout a volume. You can think of a continuous charge distribution like a bundle of charges all wrapped up together.
+
+When we want to find out the electric field created from this “bundle,” we will have to divide the bundle into small parts that have a small charge $\Delta q$. Next, we use the equation for calculating the electric field for one source charge (see 8.3.1) to calculate the electric field at a point $P$:
+
+$\Delta \mathbf{E} = k_{e}\frac{\Delta q}{r^{2}}\mathbf{\hat{r}}$
+
+Then, we find the total electric field at the point $P$ by summing everything up:
+
+$\mathbf{E} \approx k_{e}\sum_{i}^{}\frac{\Delta q_{i}}{r^{2}_{i}}\mathbf{\hat{r}}_{i}$
+
+Note that the field is an approximation.
+
+However, we know that the charge distribution is continuous, so we the following:
+
+$\mathbf{E} = k_{e}\space\lim_{\Delta q_{i} \to 0} \space\sum_{i}^{}\frac{\Delta q_{i}}{r^{2}_{i}}\space\mathbf{\hat{r}}_{i} = k_{e}\int_{}^{} \frac{dq}{r^{2}}\space\mathbf{\hat{r}}$
+
+You can think of this like finding the center of mass for a uniformly distributed element. For example, finding the center of mass of a plank of wood which has a uniform mass distribution. In fact, just like how you used the density equations for center of mass, you can also use it for charge. This concept is called *charge density*.
+
+* A charge of $Q$ that is uniformly distributed throughout a volume $V$ is called a **volume charge density** ($\rho$).
+  * $\rho = \frac{Q}{V}$
+  * $\rho$ is coulombs per cubic meter ($C/m^{3}$)
+* A charge of $Q$ that is uniformly distributed on a surface of area $A$ is called a **surface charge density**($\sigma$).
+  * $\sigma = \frac{Q}{A}$
+  * $\sigma$ is coulombs per square meter ($C/m^{2}$)
+* A charge of $Q$ that is uniformly distributed along a line of length $l$ is called a **linear charge density** ($\lambda$).
+  * $\lambda = \frac{Q}{l}$
+  * $\lambda$ is coulombs per meter ($C/m$)
+
+And just like how you can have something uniformly distributed, you can also have the charge be *nonuniformly*distributed. This nonuniform distribution can be over a volume, surface, or line. The amount of charge $dq$ in a small volume/surface/line are the following:
+
+* Volume: $dq = \rho dV$
+* Surface: $dq = \sigma dV$
+* Line: $dq = \lambda dV$
+
+## 8.3.3 - Electric Field Lines
+
 ### Sub Sub Heading
 
-## 8.3.3 - Electric Fields of Continuous Charge Distributions
-
-### Sub Sub Heading
-
-## 8.3.4 - Electric Field Lines
-
-### Sub Sub Heading
-
-## 8.3.5 - Charged Particle Motion in Uniform Electric Fields
+## 8.3.4 - Charged Particle Motion in Uniform Electric Fields
 
 ### Sub Sub Heading
 
